k8s/test/test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
        version: v1
    spec:
      containers:
        - name: test
          image: yuexclusive/test:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /configs/
            - name: log
              mountPath: /app/log

        - name: filebeat
          image: docker.elastic.co/beats/filebeat:7.16.3
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/filebeat/filebeat.yml
              subPath: filebeat.yml
            - name: log
              mountPath: /usr/share/filebeat/test
            
      volumes:
        - name: config-volume
          configMap:
            name: test-configmap
        - name: log
          emptyDir: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
        version: v2
    spec:
      containers:
        - name: test
          image: yuexclusive/test:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /configs/
      volumes:
      - name: config-volume
        configMap:
          name: test-configmap
