k8s/test/virtual-service.yml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test
spec:
  hosts:
  - "test"
  http:
  - match:
    - uri:
        prefix: /
      headers:
        cookie:
          regex: ^(.*?;)?(version=v2)(;.*)?$
    route:
    - destination:
        port:
          number: 80
        host: test
        subset: v2
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: test
        subset: v1
